updateVisible custom binding to fix Google Maps; some refactoring

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,5 +1,15 @@
 /* ------- Login View ----- */
 
+.shim {
+	background-color: white;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 5;
+}
+
 .login-view {
 	background-color: #ff1744;
 	position: absolute;
@@ -7,7 +17,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 1;
+	z-index: 6;
 	background-image: radial-gradient(circle, #b3e5fc 7%, #f8bbd0 99%);
 }
 
