--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,7 +38,3 @@ body,
 	margin: 0;
 	padding: 0;
 }
-
-.app {
-	display: none;
-}
